--- a/runtime/test-runtime/client/Cargo.toml
+++ b/runtime/test-runtime/client/Cargo.toml
@@ -6,19 +6,19 @@ edition = "2018"
 license = "GPL-3.0"
 
 [dependencies]
-sc-block-builder = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sc-light = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sc-service = { git = "https://github.com/paritytech/substrate", branch = "master", features = ["test-helpers"],  default-features = false }
-substrate-test-client = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sp-core = { git = "https://github.com/paritytech/substrate", branch = "master" }
+sc-block-builder = { git = "https://github.com/paritytech/substrate", branch = "ashley-service-multiple-return" }
+sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "ashley-service-multiple-return" }
+sc-light = { git = "https://github.com/paritytech/substrate", branch = "ashley-service-multiple-return" }
+sc-service = { git = "https://github.com/paritytech/substrate", branch = "ashley-service-multiple-return", features = ["test-helpers"],  default-features = false }
+substrate-test-client = { git = "https://github.com/paritytech/substrate", branch = "ashley-service-multiple-return" }
+sp-core = { git = "https://github.com/paritytech/substrate", branch = "ashley-service-multiple-return" }
 polkadot-test-runtime = { path = ".." }
 polkadot-runtime-common = { path = "../../common" }
 polkadot-primitives = { path = "../../../primitives" }
-sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sp-api = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "master" }
+sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "ashley-service-multiple-return" }
+sp-api = { git = "https://github.com/paritytech/substrate", branch = "ashley-service-multiple-return" }
+sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "ashley-service-multiple-return" }
 codec = { package = "parity-scale-codec", version = "1.0.0" }
-sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "master" }
-pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "master" }
+sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "ashley-service-multiple-return" }
+pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "ashley-service-multiple-return" }
 futures = "0.3.1"
