--- a/collator/Cargo.toml
+++ b/collator/Cargo.toml
@@ -7,16 +7,16 @@ edition = "2018"
 
 [dependencies]
 futures = "0.3.4"
-sc-service = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sc-executor = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sc-cli = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sc-network = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sp-api = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sp-core = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "master" }
-consensus_common = { package = "sp-consensus", git = "https://github.com/paritytech/substrate", branch = "master" }
+sc-service = { git = "https://github.com/paritytech/substrate", branch = "ashley-service-multiple-return" }
+sc-executor = { git = "https://github.com/paritytech/substrate", branch = "ashley-service-multiple-return" }
+sc-cli = { git = "https://github.com/paritytech/substrate", branch = "ashley-service-multiple-return" }
+sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "ashley-service-multiple-return" }
+sc-network = { git = "https://github.com/paritytech/substrate", branch = "ashley-service-multiple-return" }
+sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "ashley-service-multiple-return" }
+sp-api = { git = "https://github.com/paritytech/substrate", branch = "ashley-service-multiple-return" }
+sp-core = { git = "https://github.com/paritytech/substrate", branch = "ashley-service-multiple-return" }
+sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "ashley-service-multiple-return" }
+consensus_common = { package = "sp-consensus", git = "https://github.com/paritytech/substrate", branch = "ashley-service-multiple-return" }
 polkadot-primitives = { path = "../primitives" }
 polkadot-cli = { path = "../cli" }
 polkadot-network = { path = "../network" }
@@ -29,7 +29,7 @@ futures-timer = "2.0"
 codec = { package = "parity-scale-codec", version = "1.3.0" }
 
 [dev-dependencies]
-keyring = { package = "sp-keyring", git = "https://github.com/paritytech/substrate", branch = "master" }
+keyring = { package = "sp-keyring", git = "https://github.com/paritytech/substrate", branch = "ashley-service-multiple-return" }
 
 [features]
 default = ["service-old"]
