--- a/node/messages/Cargo.toml
+++ b/node/messages/Cargo.toml
@@ -9,5 +9,5 @@ description = "Message types used by Subsystems"
 polkadot-primitives = { path = "../../primitives" }
 polkadot-statement-table = { path = "../../statement-table" }
 polkadot-node-primitives = { path = "../primitives" }
-sc-network = { git = "https://github.com/paritytech/substrate", branch = "master" }
+sc-network = { git = "https://github.com/paritytech/substrate", branch = "ashley-service-multiple-return" }
 futures = "0.3.5"
