--- a/node/overseer/Cargo.toml
+++ b/node/overseer/Cargo.toml
@@ -10,7 +10,7 @@ log = "0.4.8"
 futures-timer = "3.0.2"
 streamunordered = "0.5.1"
 polkadot-primitives = { path = "../../primitives" }
-client = { package = "sc-client-api", git = "https://github.com/paritytech/substrate", branch = "master" }
+client = { package = "sc-client-api", git = "https://github.com/paritytech/substrate", branch = "ashley-service-multiple-return" }
 messages = { package = "polkadot-node-messages", path = "../messages" }
 
 [dev-dependencies]
