--- a/node/primitives/Cargo.toml
+++ b/node/primitives/Cargo.toml
@@ -9,4 +9,4 @@ description = "Primitives types for the Node-side"
 polkadot-primitives = { path = "../../primitives" }
 polkadot-statement-table = { path = "../../statement-table" }
 parity-scale-codec = { version = "1.3.0", default-features = false, features = ["derive"] }
-runtime_primitives = { package = "sp-runtime", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
+runtime_primitives = { package = "sp-runtime", git = "https://github.com/paritytech/substrate", branch = "ashley-service-multiple-return", default-features = false }
