--- a/rpc/Cargo.toml
+++ b/rpc/Cargo.toml
@@ -7,21 +7,21 @@ edition = "2018"
 [dependencies]
 jsonrpc-core = "14.0.3"
 polkadot-primitives = { path = "../primitives" }
-sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "master"  }
-sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "master"  }
-sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "master"  }
-sp-api = { git = "https://github.com/paritytech/substrate", branch = "master"  }
-sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "master"  }
-sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "master"  }
-sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sc-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "master"}
-sc-consensus-babe-rpc = { git = "https://github.com/paritytech/substrate", branch = "master"}
-sc-consensus-epochs = { git = "https://github.com/paritytech/substrate", branch = "master"}
-sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sc-finality-grandpa-rpc = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "master"}
-txpool-api = { package = "sp-transaction-pool", git = "https://github.com/paritytech/substrate", branch = "master" }
-frame-rpc-system = { package = "substrate-frame-rpc-system", git = "https://github.com/paritytech/substrate", branch = "master"  }
-pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "master" }
+sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "ashley-service-multiple-return"  }
+sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "ashley-service-multiple-return"  }
+sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "ashley-service-multiple-return"  }
+sp-api = { git = "https://github.com/paritytech/substrate", branch = "ashley-service-multiple-return"  }
+sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "ashley-service-multiple-return"  }
+sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "ashley-service-multiple-return"  }
+sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "ashley-service-multiple-return" }
+sc-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "ashley-service-multiple-return"}
+sc-consensus-babe-rpc = { git = "https://github.com/paritytech/substrate", branch = "ashley-service-multiple-return"}
+sc-consensus-epochs = { git = "https://github.com/paritytech/substrate", branch = "ashley-service-multiple-return"}
+sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "ashley-service-multiple-return" }
+sc-finality-grandpa-rpc = { git = "https://github.com/paritytech/substrate", branch = "ashley-service-multiple-return" }
+sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "ashley-service-multiple-return"}
+txpool-api = { package = "sp-transaction-pool", git = "https://github.com/paritytech/substrate", branch = "ashley-service-multiple-return" }
+frame-rpc-system = { package = "substrate-frame-rpc-system", git = "https://github.com/paritytech/substrate", branch = "ashley-service-multiple-return"  }
+pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "ashley-service-multiple-return" }
 codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false }
-sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "master" }
+sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "ashley-service-multiple-return" }
